--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "dependencies": {
     "express": "^4.18.2",
     "cors": "^2.8.5",
-    "groq-sdk": "^0.3.0"
+    "@google/generative-ai": "^0.21.0"
   },
   "scripts": {
     "start": "node server.js"
