--- a/package.json
+++ b/package.json
@@ -1,13 +1,17 @@
 {
   "name": "finrangers-backend",
   "version": "1.0.0",
+  "description": "FinRangers AI Backend",
   "main": "server.js",
-  "dependencies": {
-    "express": "^4.18.2",
-    "cors": "^2.8.5",
-    "@google/generative-ai": "^0.21.0"
-  },
   "scripts": {
     "start": "node server.js"
+  },
+  "dependencies": {
+    "@google/generative-ai": "^0.21.0",
+    "cors": "^2.8.5",
+    "express": "^4.18.2"
+  },
+  "engines": {
+    "node": ">=18.0.0"
   }
 }
