--- a/package.json
+++ b/package.json
@@ -1,7 +1,14 @@
 {
+  "name": "finrangers-backend",
+  "version": "1.0.0",
+  "main": "server.js",
   "dependencies": {
-    "@google/generative-ai": "^0.21.0",
+    "express": "^4.18.2",
     "cors": "^2.8.5",
-    "express": "^4.21.0"
+    "@google/generative-ai": "^0.21.0",
+    "dotenv": "^16.3.1"
+  },
+  "scripts": {
+    "start": "node server.js"
   }
 }
